--- a/package.json
+++ b/package.json
@@ -10,11 +10,24 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.20.0",
+    "chartjs-node-canvas": "^3.0.6",
+    "commando-provider-mongo": "^1.1.1",
     "discord-economy": "^1.2.2",
     "discord-giveaways": "^4.2.1",
     "discord.js": "^12.3.1",
+    "discord.js-commando": "^0.10.0",
     "discord.js-giveaway": "^1.0.2",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "ms": "^2.1.2"
+    "got": "^11.7.0",
+    "memejs": "^1.2.3",
+    "mongodb": "^3.6.2",
+    "mongoose": "^5.10.9",
+    "ms": "^2.1.2",
+    "random-puppy": "^1.1.0",
+    "snekfetch": "^4.0.4",
+    "snoowrap": "^1.21.0",
+    "timchen": "^1.1.1"
   }
 }
